# Add tests (alphabetical order) ##############################################
#

add_subdirectory(beam_beam_collision)
add_subdirectory(capacitive_discharge)
add_subdirectory(laser_acceleration)
add_subdirectory(laser_ion)
add_subdirectory(plasma_acceleration)
add_subdirectory(plasma_mirror)
add_subdirectory(spacecraft_charging)
add_subdirectory(uniform_plasma)
add_subdirectory(thomson_parabola_spectrometer)
