# Add tests (alphabetical order) ##############################################
#

add_subdirectory(accelerator_lattice)
add_subdirectory(boosted_diags)
add_subdirectory(boundaries)
add_subdirectory(btd_rz)
add_subdirectory(collider_relevant_diags)
add_subdirectory(collision)
add_subdirectory(diff_lumi_diag)
add_subdirectory(divb_cleaning)
add_subdirectory(dive_cleaning)
add_subdirectory(electrostatic_dirichlet_bc)
add_subdirectory(electrostatic_sphere)
add_subdirectory(electrostatic_sphere_eb)
add_subdirectory(embedded_boundary_cube)
add_subdirectory(embedded_boundary_diffraction)
add_subdirectory(embedded_boundary_python_api)
add_subdirectory(embedded_boundary_rotated_cube)
add_subdirectory(embedded_circle)
add_subdirectory(energy_conserving_thermal_plasma)
add_subdirectory(field_probe)
add_subdirectory(flux_injection)
add_subdirectory(gaussian_beam)
add_subdirectory(implicit)
add_subdirectory(initial_distribution)
add_subdirectory(initial_plasma_profile)
add_subdirectory(field_ionization)
add_subdirectory(ion_stopping)
add_subdirectory(langmuir)
add_subdirectory(langmuir_fluids)
add_subdirectory(larmor)
add_subdirectory(laser_injection)
add_subdirectory(laser_injection_from_file)
add_subdirectory(laser_on_fine)
add_subdirectory(load_external_field)
add_subdirectory(magnetostatic_eb)
add_subdirectory(maxwell_hybrid_qed)
add_subdirectory(nci_fdtd_stability)
add_subdirectory(nci_psatd_stability)
add_subdirectory(nodal_electrostatic)
add_subdirectory(nuclear_fusion)
add_subdirectory(ohm_solver_em_modes)
add_subdirectory(ohm_solver_ion_beam_instability)
add_subdirectory(ohm_solver_ion_Landau_damping)
add_subdirectory(ohm_solver_magnetic_reconnection)
add_subdirectory(open_bc_poisson_solver)
add_subdirectory(particle_boundary_interaction)
add_subdirectory(particle_boundary_process)
add_subdirectory(particle_boundary_scrape)
add_subdirectory(particle_data_python)
add_subdirectory(particle_fields_diags)
add_subdirectory(particle_pusher)
add_subdirectory(particle_thermal_boundary)
add_subdirectory(particles_in_pml)
add_subdirectory(pass_mpi_communicator)
add_subdirectory(pec)
add_subdirectory(photon_pusher)
add_subdirectory(plasma_lens)
add_subdirectory(pml)
add_subdirectory(point_of_contact_eb)
add_subdirectory(projection_divb_cleaner)
add_subdirectory(python_wrappers)
add_subdirectory(qed)
add_subdirectory(radiation_reaction)
add_subdirectory(reduced_diags)
add_subdirectory(relativistic_space_charge_initialization)
add_subdirectory(repelling_particles)
add_subdirectory(resampling)
add_subdirectory(restart)
add_subdirectory(restart_eb)
add_subdirectory(rigid_injection)
add_subdirectory(scraping)
add_subdirectory(semi_implicit_electrostatic)
add_subdirectory(silver_mueller)
add_subdirectory(single_particle)
add_subdirectory(space_charge_initialization)
add_subdirectory(subcycling)
add_subdirectory(vay_deposition)
