target_sources(WarpX
  PRIVATE
    MultiParticleContainer.cpp
    ParticleBoundaries.cpp
    PhotonParticleContainer.cpp
    PhysicalParticleContainer.cpp
    RigidInjectedParticleContainer.cpp
    WarpXParticleContainer.cpp
    LaserParticleContainer.cpp
    ParticleBoundaryBuffer.cpp
)

#add_subdirectory(Algorithms)
add_subdirectory(Collision)
#add_subdirectory(Deposition)
add_subdirectory(ElementaryProcess)
add_subdirectory(Gather)
add_subdirectory(ParticleCreation)
#add_subdirectory(Pusher)
add_subdirectory(Resampling)
add_subdirectory(Sorting)
